Started adding @ngrx/route-store

--- a/src/app/items/item/item.component.html
+++ b/src/app/items/item/item.component.html
@@ -6,7 +6,7 @@
     <div>{{item.name}}</div>
   </div>
   <div class="col-md-3 actions">
-    <button class="btn btn-primary" (click)="onEditClicked()">Edit</button>
-    <button class="btn btn-danger" (click)="onDeleteClicked()">Delete</button>
+    <button class="btn btn-danger pull-right" (click)="onDeleteClicked()">Delete</button>
+    <button class="btn btn-primary pull-right" (click)="onEditClicked()">Edit</button>
   </div>
 </div>
