--- a/src/app/items/item-list/item-list.component.html
+++ b/src/app/items/item-list/item-list.component.html
@@ -1,14 +1,19 @@
 <div class="container">
+  <h2>Your Items</h2>
   <div class="row header">
     <div class="col-md-2 id">
       <div>ID</div>
     </div>
-    <div class="col-md-6 name">
+    <div class="col-md-7 name">
       <div>Name</div>
     </div>
-    <div class="col-md-4 actions">
-      <div>Actions</div>
+    <div class="col-md-3 actions">
+      <div class="pull-right">Actions</div>
     </div>
   </div>
   <div app-item *ngFor="let item of items$ | async" [item]="item" (itemClicked)="onItemClicked($event)"></div>
+
+  <div class="row">
+    <div app-add-item class="col-md-12"></div>
+  </div>
 </div>
