Added simple form feedback

--- a/src/app/items/item-form/item-form.component.html
+++ b/src/app/items/item-form/item-form.component.html
@@ -1,8 +1,13 @@
 <form [formGroup]="itemForm">
   <div class="form-group">
     <label for="itemName">Name</label>
-    <input type="text" class="form-control" [formControl]="name" id="itemName" aria-describedby="nameHelp" placeholder="Enter an item name">
-    <small id="nameHelp" class="form-text text-muted">Give this item a good name.</small>
+    <input type="text" class="form-control" formControlName="name" id="itemName" aria-describedby="nameHelp" placeholder="Enter an item name">
+    <small id="nameHelp" class="form-text"
+            [ngClass]="{
+             'text-danger': itemForm.controls.name.invalid && itemForm.controls.name.touched,
+             'text-muted': itemForm.controls.name.valid || itemForm.controls.name.touched === false
+            }"
+            [innerText]="itemForm.controls.name.invalid && itemForm.controls.name.touched ? 'Name is invalid' : 'Give this item a good name'"></small>
   </div>
 
   <button class="btn btn-primary" type="button" (click)="onDoneClicked()">Done</button>
