Implemented create and edit as routes.
Created all crud opreations

--- a/src/app/items/add-item/add-item.component.html
+++ b/src/app/items/add-item/add-item.component.html
@@ -1,2 +1,2 @@
-<h2>Add a new Item</h2>
-<app-item-form></app-item-form>
+<h3>Add a new Item</h3>
+<app-item-form (doneClicked)="onDoneClicked($event)"></app-item-form>
