--- a/src/app/items/item-list/item-list.component.scss
+++ b/src/app/items/item-list/item-list.component.scss
@@ -1,5 +1,14 @@
+.title {
+  margin-bottom: 20px;
+}
+
+.add-button {
+  text-align: right;
+}
+
 .header {
   font-size: 1.5em;
+  padding-bottom: 10px;
 
   .actions {
     text-align: center;
