--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>ngrx Learners Permit</h1>
 
-<app-item-list></app-item-list>
-
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
