--- a/src/app/items/item-list/item-list.component.html
+++ b/src/app/items/item-list/item-list.component.html
@@ -1,19 +1,16 @@
-<div class="container">
-  <h2>Your Items</h2>
-  <div class="row header">
-    <div class="col-md-2 id">
-      <div>ID</div>
-    </div>
-    <div class="col-md-7 name">
-      <div>Name</div>
-    </div>
-    <div class="col-md-3 actions">
-      <div class="pull-right">Actions</div>
-    </div>
+<div class="row title">
+  <h3 class="col-md-11">Your Items</h3>
+  <div app-add-button (buttonClicked)="onAddClicked()" class="col-md-1 add-button"></div>
+</div>
+<div class="row header">
+  <div class="col-md-2 id">
+    <div>ID</div>
   </div>
-  <div app-item *ngFor="let item of items$ | async" [item]="item" (itemClicked)="onItemClicked($event)"></div>
-
-  <div class="row">
-    <div app-add-item class="col-md-12"></div>
+  <div class="col-md-7 name">
+    <div>Name</div>
+  </div>
+  <div class="col-md-3 actions">
+    <div class="pull-right">Actions</div>
   </div>
 </div>
+<div app-item *ngFor="let item of items$ | async" [item]="item" (itemClicked)="onItemClicked($event)"></div>
